sonarcloud hotfix