@@ -8,6 +8,8 @@ import org.site.forum.domain.topic.entity.Topic;
 import org.site.forum.domain.topic.mapper.TopicMapper;
 import org.springframework.data.domain.Page;
 import org.springframework.stereotype.Component;
+
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -24,9 +26,9 @@ public class PaginatedResponseMapper {
     }
 
     private List<TopicResponseDto> mapTopicsToResponseDto(Page<Topic> topicPage) {
-        return topicPage.getContent().stream()
+        return Collections.unmodifiableList(topicPage.getContent().stream()
                 .map(this::mapTopicToResponseDto)
-                .collect(Collectors.toList());
+                .toList());
     }
 
     private TopicResponseDto mapTopicToResponseDto(Topic topic) {
